RESOLVED FIXED104946
DownloadManager shouldn't call the web process directly
https://bugs.webkit.org/show_bug.cgi?id=104946
Summary DownloadManager shouldn't call the web process directly
Anders Carlsson
Reported 2012-12-13 13:38:58 PST
DownloadManager shouldn't call the web process directly
Attachments
Patch (6.62 KB, patch)
2012-12-13 13:46 PST, Anders Carlsson
koivisto: review+
Anders Carlsson
Comment 1 2012-12-13 13:46:03 PST
Anders Carlsson
Comment 2 2012-12-13 14:28:22 PST
Note You need to log in before you can comment on or make changes to this bug.